feat: <a> to link to cart.html

--- a/products.html
+++ b/products.html
@@ -73,7 +73,7 @@
             </div>
             </div>
             <div id="btn-cart">
-                <button id="white-cart"><a href="./products.html"><img src="./imgs/CartClicked.png" alt="whiteCart">ㅤ+ Add to cart</a></button>
+                <button id="white-cart"><a href="./cart.html"><img src="./imgs/CartClicked.png" alt="whiteCart">ㅤ+ Add to cart</a></button>
             </div>
             <div id="details">
                 <p><strong>Wax: </strong>Top grade Soy wax that delivers a smoke less,  consistent burn</p>
