feat: final index.html update

--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body>
     <header>
         <div class="logo">
-            <img src="assets/logo.png" alt="">
+            <img src="assets/logo.png" alt="logo">
             <h1>Candleaf</h1>
         </div>
         <nav>
             <ul class="links">
                 <div class="seta">
                     <li><a href="#">Discovery</a></li>
-                    <img src="assets/seta.png" alt="">
+                    <img src="assets/seta.png" alt="seta">
                 </div>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact us</a></li>
             </ul>
         </nav>
         <div class="icones">
-            <img src="assets/pessoa.png" alt="">
-            <img src="assets/carrinho.png" alt="">
+            <img src="assets/pessoa.png" alt="users">
+            <img src="assets/carrinho.png" alt="cart">
         </div>
     </header>
     <section class="background">
@@ -44,7 +44,7 @@
             <div class="produtos">
                 <div class="vela">
                     <div>
-                        <img src="assets/spiced-mint.png" alt="">
+                        <img src="assets/spiced-mint.png" alt="vela mint">
                     </div>
                     <div class="nome-produto">
                         <p>Spiced Mint</p>
@@ -55,7 +55,7 @@
                 </div>
                 <div class="vela">
                     <div>
-                        <img src="assets/sweet-strawberry.png" alt="">
+                        <img src="assets/sweet-strawberry.png" alt="vela strawberry">
                     </div>
                     <div class="nome-produto">
                         <p>Sweet Staweberry</p>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="vela">
                     <div>
-                        <img src="assets/cool-blueberries.png" alt="">
+                        <img src="assets/cool-blueberries.png" alt="blueberries">
                     </div>
                     <div class="nome-produto">
                         <p>Cool Blueberries</p>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="vela">
                     <div>
-                        <img src="assets/juicy-lemon.png" alt="">
+                        <img src="assets/juicy-lemon.png" alt="vela lemon">
                     </div>
                     <div class="nome-produto">
                         <p>Juicy Lemon</p>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="vela">
                     <div>
-                        <img src="assets/product-name.png" alt="">
+                        <img src="assets/product-name.png" alt="produtos">
                     </div>
                     <div class="nome-produto">
                         <p>Product name</p>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="vela">
                     <div>
-                        <img src="assets/fragant-cinnamon.png" alt="">
+                        <img src="assets/fragant-cinnamon.png" alt="cinnamon">
                     </div>
                     <div class="nome-produto">
                         <p>Fragrant Cinnamon</p>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="vela">
                     <div>
-                        <img src="assets/summer-cherries.png" alt="">
+                        <img src="assets/summer-cherries.png" alt="cherries">
                     </div>
                     <div class="nome-produto">
                         <p>Summer Cherries</p>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="vela">
                     <div>
-                        <img src="assets/clean-lavander.png" alt="">
+                        <img src="assets/clean-lavander.png" alt="vela lavander">
                     </div>
                     <div class="nome-produto">
                         <p>Clean Lavander</p>
@@ -150,7 +150,7 @@
             </div>
         </div>
         <div class="velas-info">
-            <img src="assets/velas.png" alt="">
+            <img src="assets/velas.png" alt="info img">
         </div>
     </section>
     <section class="secao-testimonials">
@@ -161,8 +161,8 @@
         <div class="testimonials">
             <article>
                 <div>
-                    <img src="assets/luisa.png" alt="">
-                    <img src="assets/quatro-estrelas.png" alt="">
+                    <img src="assets/luisa.png" alt="luisa">
+                    <img src="assets/quatro-estrelas.png" alt="avaliacao">
                 </div>
                 <div class="recomendacoes">
                     <p>“I love it! No more air fresheners”</p>
@@ -171,8 +171,8 @@
             </article>
             <article>
                 <div>
-                    <img src="assets/edoardo.png" alt="">
-                    <img src="assets/cinco-estrelas.png" alt="">
+                    <img src="assets/edoardo.png" alt="edoardo">
+                    <img src="assets/cinco-estrelas.png" alt="avaliacao">
                 </div>
                 <div class="recomendacoes">
                     <p>“Raccomended for everyone”</p>
@@ -181,8 +181,8 @@
             </article>
             <article>
                 <div>
-                    <img src="assets/mart.png" alt="">
-                    <img src="assets/quatro-estrelas.png" alt="">
+                    <img src="assets/mart.png" alt="mart">
+                    <img src="assets/quatro-estrelas.png" alt="avaliacao">
                 </div>
                 <div class="recomendacoes">
                     <p>“Looks very natural, the smell is awesome”</p>
@@ -199,7 +199,7 @@
         <div class="produtos">
             <div class="vela">
                 <div>
-                    <img src="assets/spiced-mint.png" alt="">
+                    <img src="assets/spiced-mint.png" alt="vela mint">
                 </div>
                 <div class="nome-produto">
                     <p>Spiced Mint</p>
@@ -210,7 +210,7 @@
             </div>
             <div class="vela">
                 <div>
-                    <img src="assets/sweet-strawberry.png" alt="">
+                    <img src="assets/sweet-strawberry.png" alt="vela strawberry">
                 </div>
                 <div class="nome-produto">
                     <p>Sweet Straweberry</p>
@@ -221,7 +221,7 @@
             </div>
             <div class="vela">
                 <div>
-                    <img src="assets/cool-blueberries.png" alt="">
+                    <img src="assets/cool-blueberries.png" alt="vela blueberries">
                 </div>
                 <div class="nome-produto">
                     <p>Cool Blueberries</p>
@@ -232,7 +232,7 @@
             </div>
             <div class="vela">
                 <div>
-                    <img src="assets/juicy-lemon.png" alt="">
+                    <img src="assets/juicy-lemon.png" alt="vela lemon">
                 </div>
                 <div class="nome-produto">
                     <p>Juicy Lemon</p>
@@ -247,7 +247,7 @@
         <div class="barra">
             <div class="logo-footer">
                 <div class="logo">
-                    <img src="assets/logo-preta.png" alt="">
+                    <img src="assets/logo-preta.png" alt=" logo footer">
                     <h6 class="footer-logo-titulo">Candleaf</h6>
                 </div>
                 <p>Your natural candle made for your home and for your wellness.</p>
