--- a/shipping.html
+++ b/shipping.html
@@ -90,7 +90,7 @@
 
                 <a id="back-button" href="./authentication.html">Back to details</a>
 
-                <button id="shipping-button"> <a id="link-shipping" href="./payment.html">Go to shipping</a> </button>
+                <button id="shipping-button"> <a id="link-shipping" href="./payment.html">Go to payment</a> </button>
 
             </div>
 
