--- a/thanks.html
+++ b/thanks.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -52,7 +52,7 @@
                 <aside class="aside">
                     <div class="divider">
                         <section id="product-info">
-                            <img class="vela" src="vela.png" alt="Topo aside" width="50">
+                            <img class="vela" src="vela.png" alt="Vela" width="50">
                             <div class="product-price" style="margin-top: 20px;">
                                 <span class="product">Spiced Mint Candleaf®</span> 
                                 <span class="price">$ 9.99</span> 
