--- a/payment.html
+++ b/payment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Payment.css">
+    <link rel="stylesheet" href="payment.css">
     <title>Candleaf</title>
 </head>
 <body>
@@ -77,8 +77,10 @@
                 </div>
             </div>
             <div class="submit">
-                <a id="back-to-cart">Back to shipping</a>
-                <button id="go-to-shipping">Pay now</button>
+                <div class="submit">
+                    <a href="shipping.html" id="back-to-cart">Back to shipping</a>
+                    <button id="go-to-shipping"><a href="thanks.html>"Pay now</a></button>
+                </div>
             </div>
         </div>
         <div class="section section-right">
