--- a/payment.html
+++ b/payment.html
@@ -79,7 +79,7 @@
             <div class="submit">
                 <div class="submit">
                     <a href="shipping.html" id="back-to-cart">Back to shipping</a>
-                    <button id="go-to-shipping"><a href="thanks.html>"Pay now</a></button>
+                    <button id="go-to-shipping"><a href="thanks.html">Pay now</a></button>
                 </div>
             </div>
         </div>
