--- a/thanks.html
+++ b/thanks.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <a class="navbar-brand" href="/initial">
+            <a class="navbar-brand" href="./index.html">
                 <img src="logo.png" alt="Logo" width="50">
             </a>
         </nav>
@@ -42,7 +42,7 @@
 
                     <section id="return-button">
                         <div class="butao" style="margin-top: 20px;">
-                            <button class="btn">Back to shopping</button>
+                            <button class="btn" href="./index.html">Back to shopping</button>
                         </div>
                     </section>
                    <div class="print">
