feat: anchor link

--- a/thanks.html
+++ b/thanks.html
@@ -42,7 +42,7 @@
 
                     <section id="return-button">
                         <div class="butao" style="margin-top: 20px;">
-                            <button class="btn" href="./index.html">Back to shopping</button>
+                            <button class="btn"><a href="./index.html">Back to shopping</a></button>
                         </div>
                     </section>
                    <div class="print">
